# banzai-floyds

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  CHANGES.md  Dockerfile  Jenkinsfile  README.rst  alembic.ini  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg
.github/workflows/: docker_image.yml  docs.yaml  e2e-tests.yaml  unit_tests.yml
alembic/: README  env.py
alembic/versions/: c9519d6ec8f5_.py
banzai_floyds/: __init__.py  arc_lines.py  background.py  binning.py  calibrations.py  cosmics.py  dbs.py  extract.py  flux.py  frames.py  fringe.py  main.py  matched_filter.py  orders.py  performance.py  profile.py  settings.py  telluric.py  trim.py  wavelengths.py
banzai_floyds/data/: bdp28d4211.fits  feige110.fits
banzai_floyds/data/orders/: coj-order-1.reg  coj-order-2.reg
banzai_floyds/data/standards/: README  README.md  bdp284211.fits  bdp28d4211.fits  eg274.fits  feige110.fits  feige34.fits  gd108.fits
banzai_floyds/tests/: e2e-k8s.yaml  test_background.py  test_binning.py  test_cosmics.py  test_e2e.py  test_extract.py  test_flux.py  test_fringing.py  test_orders.py  test_profile.py  test_telluric.py  test_wavelengths.py  utils.py
banzai_floyds/tests/data/: cosmic_ray_stamps.json
banzai_floyds/utils/: binning_utils.py  file_utils.py  fitting_utils.py  flux_utils.py  profile_utils.py  telluric_utils.py  wavelength_utils.py
characterization_testing/: Extraction.ipynb  FringeFrameMaker.ipynb  ManualReduction.ipynb  WavelengthCalibration.ipynb  astroscrappy_study.py  cosmic_conn_comparison.py  floyds_qc_plot.ipynb  harvest_cosmic_ray_stamps.py  make_residuals_pdf.py  reprocess_raw.py
debugging/: ogg_wavelengths_debugging.ipynb
docs/: README.rst  conf.py  index.rst
docs/_templates/: globaltoc.html
docs/banzai_floyds/: ExampleReduction.ipynb  data-products.rst  index.rst  processing.rst
helm-chart/banzai-floyds/: Chart.yaml  values-prod.yaml
helm-chart/banzai-floyds-e2e/: values.yaml
helm-chart/banzai-floyds-e2e/templates/: deployment.yaml
helm-chart/banzai-floyds/templates/: _helpers.tpl  cronjob.yaml  db-instrument-update.yaml  listener.yaml  workers.yaml
