[build-system]
requires = ["setuptools>=61", "cython", "extension-helpers", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "banzai-floyds"
version = "1.1.0"
requires-python = ">=3.11,<4"
description = "BANZAI Data Reduction for FLOYDS spectra"
readme = "docs/README.rst"
authors = [
    { name = "Curtis McCully", email = "cmccully@lco.global" }
]
license = {text="GPL-3.0-or-later"}
keywords = ["astronomy", "spectroscopy", "data reduction", "Las Cumbres Observatory"]
urls = { "Documentation" = "https://banzai-floyds.readthedocs.io/", "Source" = "https://github.com/lcogt/banzai-floyds" }

dependencies = [
    "astropy>=6.0",
    "lco-banzai @ git+https://github.com/lcogt/banzai.git@1.36.2",
    "matplotlib",
    "torch",
    "ipython",
    "pywavelets",
    "alembic"
]

[project.optional-dependencies]
test = [
    "pytest>=4.0",
    "coverage",
    "pytest-astropy",
    "mock"
]
docs = [
    "sphinx-astropy", 
    "sphinx-pyproject",
    "nbsphinx",
    "ipykernel"
]

style = ["pycodestyle"]

[tool.setuptools.packages.find]
where = ["."]
include = ["banzai_floyds*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
banzai_floyds = ["data/**/*", ]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
banzai_floyds_run_realtime_pipeline = "banzai_floyds.main:floyds_run_realtime_pipeline"
banzai_floyds_create_db = "banzai_floyds.main:create_db"
banzai_floyds_populate_standards = "banzai_floyds.main:populate_photometric_standards"
banzai_floyds_stack_flats = "banzai_floyds.main:banzai_floyds_stack_flats"
banzai_floyds_add_order_location = "banzai_floyds.main:add_order_location"
banzai_floyds_add_order_height = "banzai_floyds.main:add_order_height"
banzai_floyds_populate_order_heights_locations = "banzai_floyds.main:populate_order_heights_locations"
